Stopped code blocks from wrapping

--- a/src/sass/_tomorrow_hightlightjs_theme.scss
+++ b/src/sass/_tomorrow_hightlightjs_theme.scss
@@ -33,7 +33,7 @@
 
 pre code {
   display: block;
-  background: white;
+  // background: white;
   color: #4d4d4c;
   padding: 0.5em;
 }
